commit posle prettier

--- a/index.htm
+++ b/index.htm
@@ -1,95 +1,142 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="css/style.css"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>DZ-1</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="logo">
-            <h3>WebStudio</h3>
-        </div>    
-<nav>
-<ul class="info">
-    <li><a href="" target="_blank" title="Студія">Студія</a></li>
-    <li><a href="" target="_blank" title="Портфоліо">Портфоліо</a></li>
-    <li><a href="" target="_blank" title="Контакти">Контакти</a></li>
-
-</ul>
-</nav>
-<p><a href="mailto:info@devstudio.com" title="Чекайте на нашу відповідь">info@devstudio.com</a></p>
-<p><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></p>
-<h1>Ефективні рішення для вашого бізнесу</h1>
-<button type="button" name="order">Замовити послугу</button>
+      <div class="logo">
+        <h3>WebStudio</h3>
+      </div>
+      <nav>
+        <ul class="info">
+          <li><a href="" target="_blank" title="Студія">Студія</a></li>
+          <li><a href="" target="_blank" title="Портфоліо">Портфоліо</a></li>
+          <li><a href="" target="_blank" title="Контакти">Контакти</a></li>
+        </ul>
+      </nav>
+      <p>
+        <a href="mailto:info@devstudio.com" title="Чекайте на нашу відповідь"
+          >info@devstudio.com</a
+        >
+      </p>
+      <p><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></p>
+      <h1>Ефективні рішення для вашого бізнесу</h1>
+      <button type="button" name="order">Замовити послугу</button>
     </header>
 
     <main class="main">
-        <div class="skills">
-            <div>
-            <h6>УВАГА ДО ДЕТАЛЕЙ</h6>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+      <div class="skills">
+        <div>
+          <h6>УВАГА ДО ДЕТАЛЕЙ</h6>
+          <p>
+            Ідейні міркування, і навіть початок повсякденної роботи з формування
+            позиції.
+          </p>
         </div>
         <div>
-            <h6>ПУНКТУАЛЬНІСТЬ</h6>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          <h6>ПУНКТУАЛЬНІСТЬ</h6>
+          <p>
+            Завдання організації, особливо рамки і місце навчання кадрів тягне у
+            себе.
+          </p>
         </div>
         <div>
-            <h6>ПЛАНУВАННЯ</h6>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+          <h6>ПЛАНУВАННЯ</h6>
+          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
         </div>
         <div>
-            <h6>СУЧАСНІ ТЕХНОЛОГІЇ</h6>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-        </div>    
-    </div>
-    <div class="activity">
+          <h6>СУЧАСНІ ТЕХНОЛОГІЇ</h6>
+          <p>
+            Значимість цих проблем настільки очевидна, що реалізація планових
+            завдань.
+          </p>
+        </div>
+      </div>
+      <div class="activity">
         <h2>Чим ми займаємося</h2>
-        <img src="images/komp-1.jpg" alt="зображення робочого столу" width="370px" height="295 px">
-        <img src="images/komp-2.jpg" alt="зображення робочого столу" width="370px" height="295 px">
-        <img src="images/komp-3.jpg" alt="зображення робочого столу" width="370px" height="295 px">
-    </div>
-    <div class="our-team">
+        <img
+          src="images/komp-1.jpg"
+          alt="зображення робочого столу"
+          width="370px"
+          height="295 px"
+        />
+        <img
+          src="images/komp-2.jpg"
+          alt="зображення робочого столу"
+          width="370px"
+          height="295 px"
+        />
+        <img
+          src="images/komp-3.jpg"
+          alt="зображення робочого столу"
+          width="370px"
+          height="295 px"
+        />
+      </div>
+      <div class="our-team">
         <h2>Наша команда</h2>
         <div class="team">
-            <div class="team-card-1">
-                <img src="images/team-1.jpg" alt="Ігор Дем'яненко" width="270px" height="260 px"> 
-                <h6>Ігор Дем'яненко</h6>  
-                <p>Product Designer</p>
-            </div>
-            <div class="team-card-2">
-                <img src="images/team-2.jpg" alt="Ольга Рєпіна" width="270px" height="260 px"> 
-                <h6>Ольга Рєпіна</h6> 
-                <p>Frontend Developer</p>
-            </div>
-            <div class="team-card-3">
-                <img src="images/team-3.jpg" alt="Микола Тарасов" width="270px" height="260 px">
-                <h6>Микола Тарасов</h6>
-                <p>Marketing</p>
-            </div>
-            <div class="team-card-4">
-                <img src="images/team-4.jpg" alt="Михайло Єрмаков" width="270px" height="260 px">
-                <h6>Михайло Єрмаков</h6>
-                <p>UI Designer</p>
-            </div>
+          <div class="team-card-1">
+            <img
+              src="images/team-1.jpg"
+              alt="Ігор Дем'яненко"
+              width="270px"
+              height="260px"
+            />
+            <h6>Ігор Дем'яненко</h6>
+            <p>Product Designer</p>
+          </div>
+          <div class="team-card-2">
+            <img
+              src="images/team-2.jpg"
+              alt="Ольга Рєпіна"
+              width="270px"
+              height="260px"
+            />
+            <h6>Ольга Рєпіна</h6>
+            <p>Frontend Developer</p>
+          </div>
+          <div class="team-card-3">
+            <img
+              src="images/team-3.jpg"
+              alt="Микола Тарасов"
+              width="270px"
+              height="260px"
+            />
+            <h6>Микола Тарасов</h6>
+            <p>Marketing</p>
+          </div>
+          <div class="team-card-4">
+            <img
+              src="images/team-4.jpg"
+              alt="Михайло Єрмаков"
+              width="270px"
+              height="260px"
+            />
+            <h6>Михайло Єрмаков</h6>
+            <p>UI Designer</p>
+          </div>
         </div>
-
-    </div>
-
-
+      </div>
     </main>
     <footer class="footer">
-<address>
-    <div class="logo">
-        <h3>WebStudio</h3>
-    </div>
-    <p>м. Київ, пр-т Лесі Українки, 26</p>
-    <p><a href="mailto:info@devstudio.com" title="Чекайте на нашу відповідь">info@devstudio.com</a></p>
-    <p><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></p>
-</address>
-
+      <address>
+        <div class="logo">
+          <h3>WebStudio</h3>
+        </div>
+        <p>м. Київ, пр-т Лесі Українки, 26</p>
+        <p>
+          <a href="mailto:info@devstudio.com" title="Чекайте на нашу відповідь"
+            >info@devstudio.com</a
+          >
+        </p>
+        <p><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></p>
+      </address>
     </footer>
-   </body>
+  </body>
 </html>
