--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="logo">
-        <h3>WebStudio</h3>
+        <p>WebStudio</p>
       </div>
       <nav>
         <ul class="info">
@@ -24,7 +24,7 @@
           >info@devstudio.com</a
         >
       </p>
-      <p><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></p>
+      <p><a href="tel:+380961111111">+380961111111</a></p>
       <h1>Ефективні рішення для вашого бізнесу</h1>
       <button type="button" name="order">Замовити послугу</button>
     </header>
@@ -68,14 +68,14 @@
         <img
           src="images/komp-2.jpg"
           alt="зображення робочого столу"
-          width="370px"
-          height="295 px"
+          width="370"
+          height="295"
         />
         <img
           src="images/komp-3.jpg"
           alt="зображення робочого столу"
-          width="370px"
-          height="295 px"
+          width="370"
+          height="295"
         />
       </div>
       <div class="our-team">
@@ -85,8 +85,8 @@
             <img
               src="images/team-1.jpg"
               alt="Ігор Дем'яненко"
-              width="270px"
-              height="260px"
+              width="270"
+              height="260"
             />
             <h6>Ігор Дем'яненко</h6>
             <p>Product Designer</p>
@@ -95,8 +95,8 @@
             <img
               src="images/team-2.jpg"
               alt="Ольга Рєпіна"
-              width="270px"
-              height="260px"
+              width="270"
+              height="260"
             />
             <h6>Ольга Рєпіна</h6>
             <p>Frontend Developer</p>
@@ -105,8 +105,8 @@
             <img
               src="images/team-3.jpg"
               alt="Микола Тарасов"
-              width="270px"
-              height="260px"
+              width="270"
+              height="260"
             />
             <h6>Микола Тарасов</h6>
             <p>Marketing</p>
@@ -115,8 +115,8 @@
             <img
               src="images/team-4.jpg"
               alt="Михайло Єрмаков"
-              width="270px"
-              height="260px"
+              width="270"
+              height="260"
             />
             <h6>Михайло Єрмаков</h6>
             <p>UI Designer</p>
@@ -127,7 +127,7 @@
     <footer class="footer">
       <address>
         <div class="logo">
-          <h3>WebStudio</h3>
+          <p>WebStudio</p>
         </div>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <p>
@@ -135,7 +135,7 @@
             >info@devstudio.com</a
           >
         </p>
-        <p><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></p>
+        <p><a href="tel:+380961111111">+380961111111</a></p>
       </address>
     </footer>
   </body>
