commit posle validatora-1

--- a/index.htm
+++ b/index.htm
@@ -62,8 +62,8 @@
         <img
           src="images/komp-1.jpg"
           alt="зображення робочого столу"
-          width="370px"
-          height="295 px"
+          width="370"
+          height="295"
         />
         <img
           src="images/komp-2.jpg"
