--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,7 @@
       <div class="logo">
         <p>WebStudio</p>
       </div>
+      <div class="navi">
       <nav>
         <ul class="info">
           <li><a href="" target="_blank" title="Студія">Студія</a></li>
@@ -19,14 +20,18 @@
           <li><a href="" target="_blank" title="Контакти">Контакти</a></li>
         </ul>
       </nav>
+      </div>
       <p>
         <a href="mailto:info@devstudio.com" title="Чекайте на нашу відповідь"
-          >info@devstudio.com</a
-        >
+          >info@devstudio.com</a>
       </p>
-      <p><a href="tel:+380961111111">+380961111111</a></p>
+      <p>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      </p>
+      <div class="head">
       <h1>Ефективні рішення для вашого бізнесу</h1>
       <button type="button" name="order">Замовити послугу</button>
+      </div>
     </header>
 
     <main class="main">
@@ -132,10 +137,9 @@
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <p>
           <a href="mailto:info@devstudio.com" title="Чекайте на нашу відповідь"
-            >info@devstudio.com</a
-          >
+            >info@devstudio.com</a>
         </p>
-        <p><a href="tel:+380961111111">+380961111111</a></p>
+        <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
       </address>
     </footer>
   </body>
