--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="logo">
-        <p>WebStudio</p>
+        <a href="" target="_blank" title="Логотип">WebStudio</a>
       </div>
       <div class="navi">
       <nav>
@@ -132,7 +132,7 @@
     <footer class="footer">
       <address>
         <div class="logo">
-          <p>WebStudio</p>
+            <a href="" target="_blank" title="Логотип">WebStudio</a>
         </div>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <p>
