--- a/index.htm
+++ b/index.htm
@@ -13,24 +13,27 @@
         <a href="" target="_blank" title="Логотип">WebStudio</a>
       </div>
       <div class="navi">
-      <nav>
-        <ul class="info">
-          <li><a href="" target="_blank" title="Студія">Студія</a></li>
-          <li><a href="" target="_blank" title="Портфоліо">Портфоліо</a></li>
-          <li><a href="" target="_blank" title="Контакти">Контакти</a></li>
-        </ul>
-      </nav>
+        <nav>
+          <ul class="info">
+            <li><a href="" target="_blank" title="Студія">Студія</a></li>
+            <li><a href="" target="_blank" title="Портфоліо">Портфоліо</a></li>
+            <li><a href="" target="_blank" title="Контакти">Контакти</a></li>
+          </ul>
+        </nav>
       </div>
       <p>
         <a href="mailto:info@devstudio.com" title="Чекайте на нашу відповідь"
-          >info@devstudio.com</a>
+          >info@devstudio.com</a
+        >
       </p>
       <p>
         <a href="tel:+380961111111">+38 096 111 11 11</a>
       </p>
       <div class="head">
-      <h1>Ефективні рішення для вашого бізнесу</h1>
-      <button type="button" name="order">Замовити послугу</button>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+      </div>
+      <div class="button">
+        <button type="button" name="order">Замовити послугу</button>
       </div>
     </header>
 
@@ -132,12 +135,13 @@
     <footer class="footer">
       <address>
         <div class="logo">
-            <a href="" target="_blank" title="Логотип">WebStudio</a>
+          <a href="" target="_blank" title="Логотип">WebStudio</a>
         </div>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <p>
           <a href="mailto:info@devstudio.com" title="Чекайте на нашу відповідь"
-            >info@devstudio.com</a>
+            >info@devstudio.com</a
+          >
         </p>
         <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
       </address>
