--- a/index.htm
+++ b/index.htm
@@ -68,19 +68,19 @@
       <div class="activity">
         <h2>Чим ми займаємося</h2>
         <img
-          src="images/komp-1.jpg"
+          src="./images/komp-1.jpg"
           alt="зображення робочого столу"
           width="370"
           height="295"
         />
         <img
-          src="images/komp-2.jpg"
+          src="./images/komp-2.jpg"
           alt="зображення робочого столу"
           width="370"
           height="295"
         />
         <img
-          src="images/komp-3.jpg"
+          src="./images/komp-3.jpg"
           alt="зображення робочого столу"
           width="370"
           height="295"
@@ -91,7 +91,7 @@
         <div class="team">
           <div class="team-card-1">
             <img
-              src="images/team-1.jpg"
+              src="./images/team-1.jpg"
               alt="Ігор Дем'яненко"
               width="270"
               height="260"
@@ -101,7 +101,7 @@
           </div>
           <div class="team-card-2">
             <img
-              src="images/team-2.jpg"
+              src="./images/team-2.jpg"
               alt="Ольга Рєпіна"
               width="270"
               height="260"
@@ -111,7 +111,7 @@
           </div>
           <div class="team-card-3">
             <img
-              src="images/team-3.jpg"
+              src="./images/team-3.jpg"
               alt="Микола Тарасов"
               width="270"
               height="260"
@@ -121,7 +121,7 @@
           </div>
           <div class="team-card-4">
             <img
-              src="images/team-4.jpg"
+              src="./images/team-4.jpg"
               alt="Михайло Єрмаков"
               width="270"
               height="260"
