--- a/index.htm
+++ b/index.htm
@@ -9,141 +9,140 @@
   </head>
   <body>
     <header>
-      <div class="logo">
+      <nav>
         <a href="" target="_blank" title="Логотип">WebStudio</a>
-      </div>
-      <div class="navi">
-        <nav>
-          <ul class="info">
-            <li><a href="" target="_blank" title="Студія">Студія</a></li>
-            <li><a href="" target="_blank" title="Портфоліо">Портфоліо</a></li>
-            <li><a href="" target="_blank" title="Контакти">Контакти</a></li>
-          </ul>
-        </nav>
-      </div>
-      <p>
-        <a href="mailto:info@devstudio.com" title="Чекайте на нашу відповідь"
-          >info@devstudio.com</a
-        >
-      </p>
-      <p>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-      </p>
-      <div class="head">
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-      </div>
-      <div class="button">
-        <button type="button" name="order">Замовити послугу</button>
-      </div>
-    </header>
-
-    <main class="main">
-      <div class="skills">
-        <div>
-          <h6>УВАГА ДО ДЕТАЛЕЙ</h6>
-          <p>
-            Ідейні міркування, і навіть початок повсякденної роботи з формування
-            позиції.
-          </p>
-        </div>
-        <div>
-          <h6>ПУНКТУАЛЬНІСТЬ</h6>
-          <p>
-            Завдання організації, особливо рамки і місце навчання кадрів тягне у
-            себе.
-          </p>
-        </div>
-        <div>
-          <h6>ПЛАНУВАННЯ</h6>
-          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-        </div>
-        <div>
-          <h6>СУЧАСНІ ТЕХНОЛОГІЇ</h6>
-          <p>
-            Значимість цих проблем настільки очевидна, що реалізація планових
-            завдань.
-          </p>
-        </div>
-      </div>
-      <div class="activity">
-        <h2>Чим ми займаємося</h2>
-        <img
-          src="./images/komp-1.jpg"
-          alt="зображення робочого столу"
-          width="370"
-          height="295"
-        />
-        <img
-          src="./images/komp-2.jpg"
-          alt="зображення робочого столу"
-          width="370"
-          height="295"
-        />
-        <img
-          src="./images/komp-3.jpg"
-          alt="зображення робочого столу"
-          width="370"
-          height="295"
-        />
-      </div>
-      <div class="our-team">
-        <h2>Наша команда</h2>
-        <div class="team">
-          <div class="team-card-1">
-            <img
-              src="./images/team-1.jpg"
-              alt="Ігор Дем'яненко"
-              width="270"
-              height="260"
-            />
-            <h6>Ігор Дем'яненко</h6>
-            <p>Product Designer</p>
-          </div>
-          <div class="team-card-2">
-            <img
-              src="./images/team-2.jpg"
-              alt="Ольга Рєпіна"
-              width="270"
-              height="260"
-            />
-            <h6>Ольга Рєпіна</h6>
-            <p>Frontend Developer</p>
-          </div>
-          <div class="team-card-3">
-            <img
-              src="./images/team-3.jpg"
-              alt="Микола Тарасов"
-              width="270"
-              height="260"
-            />
-            <h6>Микола Тарасов</h6>
-            <p>Marketing</p>
-          </div>
-          <div class="team-card-4">
-            <img
-              src="./images/team-4.jpg"
-              alt="Михайло Єрмаков"
-              width="270"
-              height="260"
-            />
-            <h6>Михайло Єрмаков</h6>
-            <p>UI Designer</p>
-          </div>
-        </div>
-      </div>
-    </main>
-    <footer class="footer">
-      <address>
-        <div class="logo">
-          <a href="" target="_blank" title="Логотип">WebStudio</a>
-        </div>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
-        <p>
+        <ul class="info">
+          <li><a href="" target="_blank">Студія</a></li>
+          <li><a href="" target="_blank">Портфоліо</a></li>
+          <li><a href="" target="_blank">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li>
           <a href="mailto:info@devstudio.com" title="Чекайте на нашу відповідь"
             >info@devstudio.com</a
           >
+        </li>
+
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
+    <div class="heroy">
+      <section class="slogan">
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+
+        <button type="button" name="order">Замовити послугу</button>
+      </section>
+    </div>
+    <section class="skills">
+      <ul>
+        <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+
+        <p>
+          Ідейні міркування, і навіть початок повсякденної роботи з формування
+          позиції.
         </p>
-        <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
+
+        <h3>ПУНКТУАЛЬНІСТЬ</h3>
+
+        <p>
+          Завдання організації, особливо рамки і місце навчання кадрів тягне у
+          себе.
+        </p>
+
+        <h3>ПЛАНУВАННЯ</h3>
+
+        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+
+        <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+
+        <p>
+          Значимість цих проблем настільки очевидна, що реалізація планових
+          завдань.
+        </p>
+      </ul>
+    </section>
+
+    <section class="activity">
+      <h2>Чим ми займаємося</h2>
+      <ul>
+        <li>
+          <img
+            src="./images/komp-1.jpg"
+            alt="зображення робочого столу"
+            width="370"
+          />
+        </li>
+        <li>
+          <img
+            src="./images/komp-2.jpg"
+            alt="зображення робочого столу"
+            width="370"
+          />
+        </li>
+        <li>
+          <img
+            src="./images/komp-3.jpg"
+            alt="зображення робочого столу"
+            width="370"
+          />
+        </li>
+      </ul>
+    </section>
+
+    <section class="our-team">
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <img src="./images/team-1.jpg" alt="Ігор Дем'яненко" width="270" />
+          <h3>Ігор Дем'яненко</h3>
+          <p>Product Designer</p>
+        </li>
+
+        <li>
+          <img src="./images/team-2.jpg" alt="Ольга Рєпіна" width="270" />
+          <h3>Ольга Рєпіна</h3>
+          <p>Frontend Developer</p>
+        </li>
+
+        <li>
+          <img src="./images/team-3.jpg" alt="Микола Тарасов" width="270" />
+          <h3>Микола Тарасов</h3>
+          <p>Marketing</p>
+        </li>
+
+        <li>
+          <img src="./images/team-4.jpg" alt="Михайло Єрмаков" width="270" />
+          <h3>Михайло Єрмаков</h3>
+          <p>UI Designer</p>
+        </li>
+      </ul>
+    </section>
+
+    <footer class="footer">
+      <a href="" target="_blank" title="Логотип">WebStudio</a>
+
+      <address>
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/8KMrA27ERhPjtxna9"
+              target="_blank"
+              rel="noopener noreferrer"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >/li>
+          </li>
+          <li>
+            <a
+              href="mailto:info@devstudio.com"
+              title="Чекайте на нашу відповідь"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </address>
     </footer>
   </body>
