--- a/index.htm
+++ b/index.htm
@@ -36,31 +36,36 @@
     </div>
     <section class="skills">
       <ul>
-        <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+        <li><h3>УВАГА ДО ДЕТАЛЕЙ</h3>
 
-        <p>
-          Ідейні міркування, і навіть початок повсякденної роботи з формування
-          позиції.
-        </p>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з формування
+              позиції.
+            </p>
+        </li>
+        <li><h3>ПУНКТУАЛЬНІСТЬ</h3>
 
-        <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у
+              себе.
+            </p>
+        </li>
 
-        <p>
-          Завдання організації, особливо рамки і місце навчання кадрів тягне у
-          себе.
-        </p>
+        <li><h3>ПЛАНУВАННЯ</h3>
 
-        <h3>ПЛАНУВАННЯ</h3>
+            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+        </li>
 
-        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+        
+<li><h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
 
-        <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-
-        <p>
-          Значимість цих проблем настільки очевидна, що реалізація планових
-          завдань.
-        </p>
-      </ul>
+    <p>
+      Значимість цих проблем настільки очевидна, що реалізація планових
+      завдань.
+    </p>
+</li>
+        
+    </ul>
     </section>
 
     <section class="activity">
