--- a/index.htm
+++ b/index.htm
@@ -27,105 +27,108 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-    <div class="heroy">
-      <section class="slogan">
-        <h1>Ефективні рішення для вашого бізнесу</h1>
+    <main>
+      <div class="heroy">
+        <section class="slogan">
+          <h1>Ефективні рішення для вашого бізнесу</h1>
 
-        <button type="button" name="order">Замовити послугу</button>
+          <button type="button" name="order">Замовити послугу</button>
+        </section>
+      </div>
+      <section class="skills">
+        <ul>
+          <li>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+          <li>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
+
+          <li>
+            <h3>ПЛАНУВАННЯ</h3>
+
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+
+          <li>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
+          </li>
+        </ul>
       </section>
-    </div>
-    <section class="skills">
-      <ul>
-        <li>
-          <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
 
-          <p>
-            Ідейні міркування, і навіть початок повсякденної роботи з формування
-            позиції.
-          </p>
-        </li>
-        <li>
-          <h3>ПУНКТУАЛЬНІСТЬ</h3>
+      <section class="activity">
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/komp-1.jpg"
+              alt="зображення робочого столу"
+              width="370"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/komp-2.jpg"
+              alt="зображення робочого столу"
+              width="370"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/komp-3.jpg"
+              alt="зображення робочого столу"
+              width="370"
+            />
+          </li>
+        </ul>
+      </section>
 
-          <p>
-            Завдання організації, особливо рамки і місце навчання кадрів тягне у
-            себе.
-          </p>
-        </li>
+      <section class="our-team">
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./images/team-1.jpg" alt="Ігор Дем'яненко" width="270" />
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </li>
 
-        <li>
-          <h3>ПЛАНУВАННЯ</h3>
+          <li>
+            <img src="./images/team-2.jpg" alt="Ольга Рєпіна" width="270" />
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </li>
 
-          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-        </li>
+          <li>
+            <img src="./images/team-3.jpg" alt="Микола Тарасов" width="270" />
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </li>
 
-        <li>
-          <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-
-          <p>
-            Значимість цих проблем настільки очевидна, що реалізація планових
-            завдань.
-          </p>
-        </li>
-      </ul>
-    </section>
-
-    <section class="activity">
-      <h2>Чим ми займаємося</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/komp-1.jpg"
-            alt="зображення робочого столу"
-            width="370"
-          />
-        </li>
-        <li>
-          <img
-            src="./images/komp-2.jpg"
-            alt="зображення робочого столу"
-            width="370"
-          />
-        </li>
-        <li>
-          <img
-            src="./images/komp-3.jpg"
-            alt="зображення робочого столу"
-            width="370"
-          />
-        </li>
-      </ul>
-    </section>
-
-    <section class="our-team">
-      <h2>Наша команда</h2>
-      <ul>
-        <li>
-          <img src="./images/team-1.jpg" alt="Ігор Дем'яненко" width="270" />
-          <h3>Ігор Дем'яненко</h3>
-          <p>Product Designer</p>
-        </li>
-
-        <li>
-          <img src="./images/team-2.jpg" alt="Ольга Рєпіна" width="270" />
-          <h3>Ольга Рєпіна</h3>
-          <p>Frontend Developer</p>
-        </li>
-
-        <li>
-          <img src="./images/team-3.jpg" alt="Микола Тарасов" width="270" />
-          <h3>Микола Тарасов</h3>
-          <p>Marketing</p>
-        </li>
-
-        <li>
-          <img src="./images/team-4.jpg" alt="Михайло Єрмаков" width="270" />
-          <h3>Михайло Єрмаков</h3>
-          <p>UI Designer</p>
-        </li>
-      </ul>
-    </section>
-
+          <li>
+            <img src="./images/team-4.jpg" alt="Михайло Єрмаков" width="270" />
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer class="footer">
       <a href="" target="_blank" title="Логотип">WebStudio</a>
 
