--- a/index.htm
+++ b/index.htm
@@ -36,6 +36,7 @@
         </section>
       </div>
       <section class="skills">
+        <h2>НАША ПЕРЕВАГА НАД ІНШИМИ</h2>
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
